--- a/BCandSC_CSharp/Pages/Matchday.cshtml
+++ b/BCandSC_CSharp/Pages/Matchday.cshtml
@@ -175,7 +175,9 @@
 
 
         <p>
-            UserName, AccountBalance, Spieltag
+        <label>@Model.user.Name, </label>
+        <label>AccountBalance, </label>
+        <label>@Enviroment.GetEnviroment().Matchday</label>
         </p>
 
         <div class="row">
