Front-End Änderungen

--- a/BCandSC_CSharp/Pages/Formation.cshtml
+++ b/BCandSC_CSharp/Pages/Formation.cshtml
@@ -19,8 +19,7 @@
             text-align: center;
             background-color: #262626;
             margin: 5px;
-           
-
+            color: white;
         }
 
         img, picture, svg {
@@ -44,9 +43,13 @@
             a:hover {
                 color: #3f8015;
                 text-decoration: auto;
-               
             }
 
+        html body div.container main.pb-3 form div div div.field-formation button.field-formation {
+           border: black;
+        }
+
+      
 
     </style>
 
@@ -83,23 +86,23 @@
                 </div>
                 <div>
                     <img src="~/img/343.png" alt="" style="margin:5px">
-                    <div class="field-formation"><button class="field-formation" asp-route-formation="352" asp-route-userId="@Model.userId">3-5-2</button></div>
+                    <div class="field-formation"><button class="field-formation" asp-route-formation="343" asp-route-userId="@Model.userId">3-4-3</button></div>
                 </div>
                 <div>
                     <img src="~/img/451.png" alt="" style="margin:5px">
-                    <div class="field-formation"><button class="field-formation" asp-route-formation="343" asp-route-userId="@Model.userId">3-4-3</button></div>
+                    <div class="field-formation"><button class="field-formation" asp-route-formation="451" asp-route-userId="@Model.userId">4-5-1</button></div>
                 </div>
 
                 <div>
-                    <img src="~/img/352.png" alt="" style="margin:5px">
+                    <img src="~/img/433.png" alt="" style="margin:5px">
                     <div class="field-formation"><button class="field-formation" asp-route-formation="433" asp-route-userId="@Model.userId">4-3-3</button></div>
                 </div>
                 <div>
-                    <img src="~/img/343.png" alt="" style="margin:5px">
+                    <img src="~/img/442.png" alt="" style="margin:5px">
                     <div class="field-formation"><button class="field-formation" asp-route-formation="442" asp-route-userId="@Model.userId">4-4-2</button></div>
                 </div>
                 <div>
-                    <img src="~/img/451.png" alt="" style="margin:5px">
+                    <img src="~/img/532.png" alt="" style="margin:5px">
                     <div class="field-formation"><button class="field-formation" asp-route-formation="532" asp-route-userId="@Model.userId">5-3-2</button></div>
                 </div>
             </div>
