--- a/BCandSC_CSharp/Pages/Matchday.cshtml
+++ b/BCandSC_CSharp/Pages/Matchday.cshtml
@@ -12,48 +12,6 @@
 
     <style>
 
-        /*    p {
-                                                                                    margin-top: 40px;
-                                                                                    margin-bottom: 1rem;
-                                                                                    padding: 20px;
-                                                                                }
-                                                                        */
-        .container {
-            background-color: #262626;
-            width: 100%;
-            height: 100%;
-        }
-
-        /*      .form-control {
-                                                                                    display: block;
-                                                                                    width: 100%;
-                                                                                    padding: .375rem .75rem;
-                                                                                    font-size: 1rem;
-                                                                                    line-height: 1.5;
-                                                                                    color: #495057;
-                                                                                    background-color: #fff;
-                                                                                    background-clip: padding-box;
-                                                                                    border: 1px solid #ced4da;
-                                                                                    border-radius: .25rem;
-                                                                                    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-                                                                                    transition-duration: 0.15s, 0.15s;
-                                                                                }*/
-        /*
-                                                                                .form-group {
-                                                                                    margin-bottom: 1rem;
-                                                                                    text-align: center;
-                                                                                }
-
-                                                                                .pb-3, .py-3 {
-                                                                                    padding-bottom: 1rem !important;
-                                                                                    margin: 20;
-                                                                                    margin: 20px;
-                                                                                }
-                                                                        */
-        label {
-            text-align: center;
-            font-weight: 250;
-        }
 
         .card {
             position: relative;
@@ -145,11 +103,60 @@
                 border-color: #000;
             }
 
-        /*   .modeOneOne {
-                                                                                    display: block;
-                                                                                    margin: 0 auto;
-                                                                                }
-                                                                        */
+ 
+        .container1 {
+            color: #333;
+            margin: 0 auto;
+            text-align: center;
+            padding: 10px;
+        }
+
+        h3 {
+            color: white;
+            font-weight: normal;
+            letter-spacing: 0.125rem;
+            text-transform: uppercase;
+            padding: 10px;
+        }
+
+        li {
+            display: inline-block;
+            font-size: 1.5em;
+            list-style-type: none;
+            padding: 1em;
+            text-transform: uppercase;
+        }
+
+            li span {
+                display: block;
+                font-size: 4.5rem;
+            }
+
+        .message {
+            font-size: 4rem;
+        }
+
+        #content {
+            display: none;
+            padding: 1rem;
+        }
+
+        .emoji {
+            padding: 0 0.25rem;
+        }
+
+        li {
+            font-size: 1.125rem;
+            padding: 0.75rem;
+            color: white;
+        }
+
+            li span {
+                font-size: 3.375rem;
+            }
+
+}
+ 
 
     </style>
 
@@ -168,15 +175,32 @@
                     <a class="nav-item nav-link" href="#">Features</a>
                     <a class="nav-item nav-link" href="#">Pricing</a>
                     <a class="nav-item nav-link disabled" href="#">Disabled</a>
-
                 </div>
             </div>
         </nav>
 
 
+        <div class="container1">
+            <h3 id="headline">Der nächste Spieltag beginnt in:</h3>
+            <div id="countdown">
+                <ul>
+                    <li><span id="days"></span>days</li>
+                    <li><span id="hours"></span>Hours</li>
+                    <li><span id="minutes"></span>Minutes</li>
+                    <li><span id="seconds"></span>Seconds</li>
+                </ul>
+            </div>
+        </div>
+
+
+
+
+
         <p>
             UserName, AccountBalance, Spieltag
         </p>
+
+
 
         <div class="row">
             <div class="col-sm-6">
@@ -225,7 +249,7 @@
         </p>
 
 
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+       <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -250,13 +274,57 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-        </div>
+        </div>-->
+        <div class="row">
+            <div class="col-sm-4">
 
+
+                <img src="~/img/Bundesliga_Spieltag.jpg">
+            </div>
+
+            <div class="col-sm-8" style="display: grid; align-items: center;">
+                <form method="post">
+                    <div class="form-group">
+                        <input type="submit" value="Spieltag starten" class="btn btn-primary" />
+                    </div>
+                </form>
+            </div>
+
+        </div>
 
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+     
+
+        <script>
+            (function () {
+                const second = 1000,
+                    minute = second * 60,
+                    hour = minute * 60,
+                    day = hour * 24;
+
+                let birthday = "Feb 10, 2023 20:0:00",
+                    countDown = new Date(birthday).getTime(),
+                    x = setInterval(function () {
+                        let now = new Date().getTime(),
+                            distance = countDown - now;
+
+                        (document.getElementById("days").innerText = Math.floor(distance / day)),
+                            (document.getElementById("hours").innerText = Math.floor(
+                                (distance % day) / hour
+                            )),
+                            (document.getElementById("minutes").innerText = Math.floor(
+                                (distance % hour) / minute
+                            )),
+                            (document.getElementById("seconds").innerText = Math.floor(
+                                (distance % minute) / second
+                            ));
+
+                    }, 0);
+            })();
+        </script>
     </body>
 
 }
