--- a/BCandSC_CSharp/Pages/Simulation.cshtml
+++ b/BCandSC_CSharp/Pages/Simulation.cshtml
@@ -6,8 +6,10 @@
 }
 
 <div>
-    <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="startmatchday">Start Matchday</button>
-    <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="startgame">Start Game</button>
-    <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="endgame">Finish Game</button>
-    <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="startmatchday">End Matchday</button>
+    <form method="post">
+        <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="startmatchday">Start Matchday</button>
+        <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="startgame">Start Game</button>
+        <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="endgame">Finish Game</button>
+        <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="startmatchday">End Matchday</button>
+    </form>
 </div>
