--- a/BCandSC_CSharp/Pages/Simulation.cshtml
+++ b/BCandSC_CSharp/Pages/Simulation.cshtml
@@ -9,6 +9,7 @@
     <form method="post">       
         <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="startgame">Start Game</button>
         <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="endgame">Finish Game</button>
+        <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="prices">Distribute Prices</button>
         <button class="card-button" style="width: 200px; height: 30px;" asp-route-method="money">Get Your Money Back!</button>
     </form>
 </div>
