--- a/BCandSC_CSharp/Pages/Matchday.cshtml
+++ b/BCandSC_CSharp/Pages/Matchday.cshtml
@@ -243,7 +243,7 @@
             padding-left: 20px;
             margin-bottom: -5px;
         }
-       
+
 
         .form-group {
             margin-bottom: 0rem;
@@ -272,27 +272,30 @@
             </div>
         </nav>
 
-       
+
 
 
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-8">
-                 <div class="container1">
-                    <h3 id="headline">Der nächste Spieltag beginnt in:</h3>
-                    <div id="countdown">
-                        <ul>
-                            <li><span id="days"></span>days</li>
-                            <li><span id="hours"></span>Hours</li>
-                            <li><span id="minutes"></span>Minutes</li>
-                            <li><span id="seconds"></span>Seconds</li>
-                        </ul>
-                    </div>
+                    <div class="container1">
+                        <h3 id="headline">Der nächste Spieltag beginnt in:</h3>
+                        <div id="countdown">
+                            <ul>
+                                <li><span id="days"></span>days</li>
+                                <li><span id="hours"></span>Hours</li>
+                                <li><span id="minutes"></span>Minutes</li>
+                                <li><span id="seconds"></span>Seconds</li>
+                            </ul>
+                        </div>
 
-                    <div class="form-group-SPieltag">
-                        <input type="submit" value="Spieltag starten" class="btn btn-primary" />
+                        <form method="post">
+                            <div class="form-group-SPieltag">
+                                <input type="submit" value="Spieltag starten" class="btn btn-primary" />
+                            </div>
+                        </form>
+
                     </div>
-                </div>
                 </div>
                 <div class="col-sm-4">
 
