--- a/BCandSC_CSharp/Pages/Matchday.cshtml
+++ b/BCandSC_CSharp/Pages/Matchday.cshtml
@@ -350,7 +350,7 @@
                                 </div>
                                 <div class="form-group">
                                     @{
-                                        foreach (Player p in t.Players)
+                                        foreach (Player p in t.PPunkte)
                                         {
                                             <label for="PlayerName">@p.Name   (@p.Points)</label>
 
