--- a/BCandSC_CSharp/Pages/Matchday.cshtml
+++ b/BCandSC_CSharp/Pages/Matchday.cshtml
@@ -350,9 +350,9 @@
                                 </div>
                                 <div class="form-group">
                                     @{
-                                        foreach (Player p in t.PPunkte)
+                                        foreach (Player p in t.Players)
                                         {
-                                            <label for="PlayerName">@p.Name   (@p.Points)</label>
+                                            <label for="PlayerName">@p.Name   (@p.Punkte)</label>
 
                                             <br>
                                         }
