--- a/BCandSC_CSharp/Pages/PlayerSelection.cshtml
+++ b/BCandSC_CSharp/Pages/PlayerSelection.cshtml
@@ -227,7 +227,9 @@
     </nav>
 
     <form method="post">
-
+        <div>
+        <button asp-route-method="true">TEAM FÜLLEN</button>
+        </div>
         <div class="row">
             <div class="col-sm-4">
                 <div class="field-headline">
