--- a/BCandSC_CSharp/Pages/PlayerSelection.cshtml
+++ b/BCandSC_CSharp/Pages/PlayerSelection.cshtml
@@ -228,7 +228,7 @@
 
     <form method="post">
         <div>
-        <button asp-route-method="true">TEAM FÜLLEN</button>
+        <button asp-route-method="test">TEAM FÜLLEN</button>
         </div>
         <div class="row">
             <div class="col-sm-4">
