--- a/BCandSC_CSharp/Pages/PlayerSelection.cshtml
+++ b/BCandSC_CSharp/Pages/PlayerSelection.cshtml
@@ -227,9 +227,7 @@
     </nav>
 
     <form method="post">
-        <div>
-        <button asp-route-method="test">TEAM FÜLLEN</button>
-        </div>
+     
         <div class="row">
             <div class="col-sm-4">
                 <div class="field-headline">
@@ -247,8 +245,8 @@
 
             <div class="col-sm-8">
                 <div class="bet">
-                    <label class="bet-label">Wettbetrag</label>
-                    <input asp-for="BetAmount"/>
+                    <label class="bet-label">Wettbetrag in Euro:</label>
+                    <input asp-for="BetAmount" />
                 </div>
             </div>
         </div>
