--- a/BCandSC_CSharp/Pages/Formation.cshtml
+++ b/BCandSC_CSharp/Pages/Formation.cshtml
@@ -46,10 +46,8 @@
             }
 
         html body div.container main.pb-3 form div div div.field-formation button.field-formation {
-           border: black;
+            border: black;
         }
-
-      
 
     </style>
 
@@ -73,9 +71,10 @@
         </nav>
 
 
-        <p>Bitte wählen Sie Ihre Wunschformation aus.<br><br> 
-        Achtung! Die Wahl kann im nachhinein nicht mehr geändert werden! 
-        
+        <p>
+            Bitte wählen Sie Ihre Wunschformation aus.<br><br>
+            Achtung! Die Wahl kann im nachhinein nicht mehr geändert werden!
+
         </p>
 
         <form method="post">
@@ -108,7 +107,7 @@
             </div>
         </form>
 
-        
+
 
 
 
