--- a/BCandSC_CSharp/Pages/Matchday.cshtml
+++ b/BCandSC_CSharp/Pages/Matchday.cshtml
@@ -346,15 +346,17 @@
                                 </div>
                                 <div class="form-group" style="font-size:24px;">
                                     @{
-                                        if(t.Transaction > 0)
+                                        if (t.Transaction > 0)
                                         {
                                             <label>Ergebnis: @t.Transaction EUR</label>
-                                        }else{
+                                        }
+                                        else
+                                        {
                                             <label>Ergebnis: Verloren!</label>
                                         }
                                     }
 
-                                    
+
                                 </div>
                                 <div class="form-group" style="font-size: 18px;">
                                     @{
@@ -383,7 +385,7 @@
         </div>
 
 
-      
+
 
 
 
