--- a/BCandSC_CSharp/Pages/Result.cshtml
+++ b/BCandSC_CSharp/Pages/Result.cshtml
@@ -2,21 +2,21 @@
 @model BCandSC_CSharp.Pages.ResultModel
 @{
 
-      <head>
+    <head>
         <!-- Einbindung Bootstrap core und CSS. Damit lassen sich die Styles von Bootstrap nutzten -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="~/css/main.css">
 
-        </head>
+    </head>
 
 
     <style>
 
-</style>
+    </style>
 
     ViewData["Title"] = "Ergebnis";
 
-<body> 
+    <body>
         <nav class="navbar navbar-dark bg-dark">
 
             <a class="navbar-brand" href="#">TEAMBET</a>
@@ -45,18 +45,18 @@
         </p>
 
 
-    
 
 
-<h2>@ViewData["Title"]</h2>
 
-<div>
-    <label>Ihr Team hat für diesen Spieltag @Model.team.TotalPoints Punkte erreicht!</label>
-</div>
+        <h2>@ViewData["Title"]</h2>
 
-<div>
-    <label>Team: @Model.team.Name</label>
-</div>
+        <div>
+            <label>Ihr Team hat für diesen Spieltag @Model.team.TotalPoints Punkte erreicht!</label>
+        </div>
+
+        <div>
+            <label>Team: @Model.team.Name</label>
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -66,7 +66,8 @@
 }
 
 @{
-    foreach(Player p in Model.team.Players){
+    foreach (Player p in Model.team.Players)
+    {
         <div>
             <label>@p.Position.ToString(): @p.Name</label>
         </div>
