--- a/BCandSC_CSharp/Pages/PlayerSelection.cshtml
+++ b/BCandSC_CSharp/Pages/PlayerSelection.cshtml
@@ -453,7 +453,7 @@
             @{
                 if (Model.team.Players.Count == 11)
                 {
-                    <input type="submit" value="Test" asp-route-method="done" class="btn btn-primary" />
+                    <input type="submit" value="Jetzt wetten!" asp-route-method="done" class="btn btn-primary" />
                 }
             }
 
